[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owockibot"
version = "0.1.0"
description = "Python SDK for the owockibot Bounty Board API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Open Fred", email = "fred@openfredbot.xyz"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/openfredbot/bounty-hunter"
Documentation = "https://github.com/openfredbot/bounty-hunter#readme"
Repository = "https://github.com/openfredbot/bounty-hunter"
